@@ -1746,6 +1746,7 @@ CREATE TABLE rttickets (
   deadline int(11) DEFAULT NULL,
   service int(11) DEFAULT NULL,
   type int(11) DEFAULT NULL,
+  parentid int(11) DEFAULT NULL,
   invprojectid int(11) DEFAULT NULL,
   PRIMARY KEY (id),
   INDEX queueid (queueid),
@@ -1773,7 +1774,9 @@ CREATE TABLE rttickets (
   CONSTRAINT rttickets_verifierid_fkey
         FOREIGN KEY (verifierid) REFERENCES users (id) ON DELETE SET NULL ON UPDATE CASCADE,
   CONSTRAINT rttickets_invprojectid_fkey
-        FOREIGN KEY (invprojectid) REFERENCES invprojects (id) ON DELETE SET NULL ON UPDATE CASCADE
+        FOREIGN KEY (invprojectid) REFERENCES invprojects (id) ON DELETE SET NULL ON UPDATE CASCADE,
+  CONSTRAINT rttickets_parentid_fkey
+        FOREIGN KEY (parentid) REFERENCES rttickets (id) ON DELETE SET NULL ON UPDATE CASCADE
 ) ENGINE=InnoDB;
 
 # --------------------------------------------------------
@@ -3464,4 +3467,4 @@ INSERT INTO netdevicemodels (name, alternative_name, netdeviceproducerid) VALUES
 ('XR7', 'XR7 MINI PCI PCBA', 2),
 ('XR9', 'MINI PCI 600MW 900MHZ', 2);
 
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2018112800');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2018121300');
