@@ -118,4 +118,6 @@ interface LMSHelpdeskManagerInterface
 	public function GetTicketPhoneFrom($ticketid);
 
 	public function CheckTicketAccess($ticketid);
+
+    public function GetRelatedTicketIds($ticketid);
 }
