@@ -24,6 +24,8 @@
  *  $Id$
  */
 
+$_LANG['There is no related tickets.'] = 'Brak powiązanych zgłoszeń.';
+$_LANG['Related tickets:'] = 'Powiązane zgłoszenia:';
 $_LANG['Verified'] = 'Weryfikowany';
 $_LANG['Ticket has been transferred to verifier.'] = 'Zgłoszenie zostało przekazane do weryfikatora.';
 $_LANG['Transfer ticket to verifier'] = 'Przekaż zgłoszenie do weryfikatora';
