@@ -302,6 +302,18 @@
 								</TD>
 							</TR>
 							{/if}
+							{if $ticket.relatedtickets}
+							<TR>
+								<TD class="bold nobr">
+									<i class="lms-ui-icon-content lms-ui-icon-reload"></i>{trans("Related tickets:")}
+								</TD>
+								<TD>
+									{foreach $ticket.relatedtickets as $i}
+									<A href="?m=rtticketview&amp;id={$i.id}">#{t a=$i.id|string_format:"%06d"}$a{/t}</A><br>
+									{/foreach}
+								</TD>
+							</TR>
+							{/if}
 						</TABLE>
 					</TD>
 				</TR>
@@ -401,3 +413,5 @@
 {/if}
 <br>
 {include file="rt/rtticketeventlist.html"}
+<br>
+{include file="rt/rtticketrelatedlist.html"}
