@@ -177,6 +177,7 @@ version ?.??.?? (????-??-??):
   - improvement: allow to search customers which have tariff with end date fulfilling
     some common criterions [chilan]
   - improvement: bash/curl script for fetching emails from imap server to LMS RT [interduo]
+  - introduced: related tickets [interduo]
 
 version 1.11.23 (2018-03-21):
 
